# sensopart_connector

./: .gitignore  Dockerfile  README.md  package.xml  setup.cfg  setup.py  src_dependencies.rosinstall
launch/: sensopart_connector.launch.py
sensopart_connector/: sensopart.py  sensopart_node.py
test/: test_sensopart.py
test/helpers/: fake_camera.py
