<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensopart_connector</name>
  <version>0.1.1</version>
  <description>ROS2 connector to SensoPart VISOR Cameras</description>
  <maintainer email="rlh@teknologisk.dk">rlh</maintainer>
  <license>No License</license>

  <depend>rclpy</depend>
  <depend>sensopart_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-opencv</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
